--- a/SMSAdminPortal/SMSAdminPortal.csproj
+++ b/SMSAdminPortal/SMSAdminPortal.csproj
@@ -274,7 +274,6 @@
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Models\" />
-    <Folder Include="Properties\PublishProfiles\" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\SMSPortal.BusinessLogic\SMSPortal.BusinessLogic.csproj">
@@ -297,6 +296,7 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
+    <None Include="Properties\PublishProfiles\FolderProfile.pubxml" />
   </ItemGroup>
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
